--- a/about virtyou.html
+++ b/about virtyou.html
@@ -54,7 +54,7 @@ function MM_popupMsg(msg) { //v1.0
 				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
 				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="marketing.html">Marketing</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
               </ul>
             </li>
 			  
