--- a/item1catalog.html
+++ b/item1catalog.html
@@ -49,7 +49,7 @@
 				<li><a class="dropdown-item" href="marketing justification.html">Marketing Justification </a></li>
 				<li><a class="dropdown-item" href="management justification.html">Management Justification </a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="marketing.html">Marketing</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
               </ul>
             </li>
           </ul>
