contact us index page

--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@ function MM_popupMsg(msg) { //v1.0
             </form>
 
             <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
+                <a class="btn btn-primary" href="#" onclick="document.getElementById('contact-form').submit();MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
             </div>
-            <div class="status"></div>
         </div>
         <!--Grid column-->
 
