contact us pop-up index 2.0

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ function MM_popupMsg(msg) { //v1.0
             </form>
 
             <div class="text-center text-md-left">
-                <a class="btn btn-primary" href="#" onclick="document.getElementById('contact-form').submit();MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
+                <a class="btn btn-primary" href="#" onclick="MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
             </div>
         </div>
         <!--Grid column-->
