--- a/about virtyou.html
+++ b/about virtyou.html
@@ -250,9 +250,8 @@ VirtYou was founded in February 2022. The brand value is based on a lyric from Y
             </form>
 
            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
+                <a class="btn btn-primary" href="#" onclick="MM_popupMsg('Your message has been send. We will respond as soon as possible.')">Send</a>
             </div>
-            <div class="status"></div>
         </div>
         <!--Grid column-->
 
