--- a/corporate.html
+++ b/corporate.html
@@ -61,8 +61,8 @@
   
 
     <main class="container py-4">
-      <h2>Marketing</h2>
-      <h4 class="mt-4">Context of campaign and promotional activities</h4>
+      <h2 class="content_text"> Marketing</h2>
+      <h4 class="content_subtext mt-4">Context of campaign and promotional activities</h4>
       <p>Our campaign is about creating awareness for our brand but also for the ongoing problem, the issue of living in a patriarchal world in which women and minorities aren't feeling protected and able to voice their boundaries because not enough attention is paid to it, and the boundaries aren't respected or listened to. We want to spread the message that it is alright to stand up for yourself, but when you are not as confident as you aspire to be, you can use/ buy one of our sweaters so they will speak for you. <br><br>
 We started by creating awareness for our brand by using TikTok as a starter platform, as it is well known for going viral in a day. After our first campaign on TikTok, we started our Instagram account to create awareness for the longer term, as Instagram is a page where people look for information instead of the quick media on TikTok. We started to create more visuals on Instagram as we noticed that we had more viewers there. After getting the viewer excited about our brand, we shared our values and brand vision. We did this also by getting the viewer involved with the feed by sharing their own stories. We mentioned that the viewer felt supported and empowered as we received multiple stories. We launched our first campaign for the actual product when this was executed and posted the official campaign video.
  </p>
@@ -85,16 +85,16 @@ Among the many social media platforms there are, we choose TikTok because one of
 As for our second platform, we choose Instagram for the same reasons as TikTok. It fits our target audience because one of the most prominent target groups of Instagram is 18-24 years old (31%)(Statista, 2022). Nevertheless, the Instagram algorithm works differently than that of TikTok. On Instagram, you only get to see the content of the people you follow. Still, it is easy to share companies’ posts due to the broader communication methods Instagram uses, including group private messages and stories. Although the sharing options are wider, Instagram remains a platform more focused on the longer term. We will be using Instagram to keep our followers who came from our TikTok informed about the company's progression and keep them hooked up after the viral TikTok video. <br><br>
 To sum things up, TikTok will be our opening platform as it is easier to reach a bigger audience than on Instagram. In our TikTok videos, we will promote our Instagram page so potential customers can keep up to date on our progress and contain unique content via our Instagram page.
 </p>
-<h4 class="mt-4">Learning Points</h4>
+<h4 class= "content_subtext mt-4">Learning Points</h4>
       <p>During the process, we learned that it is less easy to go viral on TikTok than we taught. We also had a much bigger and more invested crowd on Instagram than on TikTok. We started to focus more on Instagram during the campaign, and this worked out for us pretty well. We began to see even more interaction when the content was not shared among the two platforms but was explicitly made for Instagram. We noticed this as we were posting our TikTok videos in the stories of our Instagram account. They got way fewer views than the actual posts made to be on the Instagram account. We also struggled with meeting our expectations/objectives. We aimed way higher in numbers than we eventually achieved. We now realize that it takes even more time for a brand to create awareness than we had in mind. <br><br>
 If we continued with the brand, we would leave TikTok out of the picture for a while to be able to focus on only one platform, Instagram in our case. This is to create better and more engaging content on one platform than medium content with a less prominent viewing on both. We would keep our interaction with the viewers as this worked out well. We noticed that viewers were excited to see their own stories coming by on the account and that these posts interacted well. 
 </p>
-<h4 class="mt-4">Future Planning</h4>
+<h4 class="content_subtext mt-4">Future Planning</h4>
       <p>Our planning was to have a post each Tuesday and Thursday at 9:00 in the morning. We switched to Wednesday and Friday in one week but noticed that this was not the correct day for our posts as there was less interaction. We also noticed that we shared everything on Instagram, but TikTok stayed behind when there was a day that we posted on Instagram. This as we were able to share our TikTok videos on Instagram but were unable to share our Instagram posts on TikTok.<br><br>
 If the project continued, we would put TikTok on hold. We would not delete the account, but we would start it up again when the brand has a more extensive viewing and we have more time to spend on the platform than we have now. We would entirely focus on Instagram as it is easier to stay in contact with your viewers and share content they created with us. For the dates we would stay the same, Tuesday and Thursday, the only change we could make is to add a day in the weekend, as we now noticed that there was a lot of time lost between the two posts (4 days without posting). So, we would probably add Saturday to keep the feed interactive/ ‘flowing.’
 </p>
       <p>As for the objectives, we would set less higher targets next time. It is not doable for a brand that is run by students, meaning that they do not get to spend 100% of their time dedicated to the brand, to achieve the same numbers a starting brand achieves who do have the time to put in 100%.</p>
-      <h4 class="mt-4">Professionalism</h4>
+      <h4 class="content_subtext mt-4">Professionalism</h4>
       <p>&nbsp;All our social media content in order of posting:&nbsp; &nbsp; &nbsp; &nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
