--- a/content justification.html
+++ b/content justification.html
@@ -253,9 +253,9 @@ Honest and real: clear communication, transparency, real quotes of women and min
 Power: usage of hard colors, lines, and images. Use of confident-looking models.
 Eye-opening and confident: Use confident-looking models, real quotes of women and minorities, hard colors, lines, and images.</p>
 <br>
-		
-		
-    </main>
+	
+		<h4 class="content_subtext mt-4">References</h4>
+What are Virtues? (2019, February 8). Virtues For Life. <a href="https://www.virtuesforlife.com/what-are-virtues/ ">https://www.virtuesforlife.com/what-are-virtues/ </a> </main>
 
     <!-- A footer with socials -->  
     <footer class="shadow-lg mt-5 py-4 bg-body">
