Content justification finished
Co-Authored-By: Kimvdham201956 <101716803+Kimvdham201956@users.noreply.github.com>

--- a/content justification.html
+++ b/content justification.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-    <title>Bootstrap Base Template | Corporate Information</title>
+    <title>Content Justification</title>
   </head>
   <body>
 
@@ -253,8 +253,12 @@ Honest and real: clear communication, transparency, real quotes of women and min
 Power: usage of hard colors, lines, and images. Use of confident-looking models.
 Eye-opening and confident: Use confident-looking models, real quotes of women and minorities, hard colors, lines, and images.</p>
 <br>
-	
-		<h4 class="content_subtext mt-4">References</h4>
+		<h4 class="content_subtext mt-4">Social Media Ad</h4>
+		<p>We have created a social media ad showing our four values by using many short clips expressing these values. In the tutorial we got the feedback that our ad was not bold enough. Since we are a bold brand it is very important to get that across to the audience with our ad. We got the suggestion to use more up-tempo music, more clips that will be shown very quickly after each other, and by making the words bigger, in the middle of the screen, so you can't avoid it. We have shared this ad on our social. You can see the ad by clicking on <a href="https://www.instagram.com/p/CcU-t-8IvWb/">this</a>.</p>
+		<p> We also designed and shared some images as posts. The color red&nbsp;appears in every image because it is linked to our brand. One of the posts we made tells the story of multiple people of our audience that we interviewed. It is meant to show others that sharing your story is okay, and our brand is a safe place that tries to represent these stories, to give them a voice.<img class="img-fluid about-the-brand-logo" src="images/Post6.png" alt="Placeholder Image"><br></p>
+		<p>Another post we did was of a picture that showed with one look what our brand is about, namely safety, protection, self-determination. No matter what your or how you look, you have the right on your own body and anyone who isn't respecting that is in the wrong and not the person who is dressing that way.<img class="img-fluid about-the-brand-logo" src="images/Post7.png" alt="Placeholder Image"><br></p>
+		
+<h4 class="content_subtext mt-4">References</h4>
 What are Virtues? (2019, February 8). Virtues For Life. <a href="https://www.virtuesforlife.com/what-are-virtues/ ">https://www.virtuesforlife.com/what-are-virtues/ </a> </main>
 
     <!-- A footer with socials -->  
