--- a/marketing justification.html
+++ b/marketing justification.html
@@ -62,10 +62,26 @@
   
 
     <main class="container py-4">
-      <h2 class="content_text"> 1 Content</h2>
-      <h4 class="content_subtext mt-4">Brand Vision&nbsp;</h4>
-      <p>We started creating our brand by making a brand vision. We have chosen the song Michelle got, namely Yellow by Coldplay. In this song, a sentence grabbed our attention because it reminded us of something that we have been struggling with and of a current issue that is going on in the world. The sentence we used is "I drew a line." We immediately thought of setting and stating boundaries and how they are not always respected. Women and minorities still have to deal with men not listening to their boundaries on a daily basis, thinking that they still have a little more say in certain situations than women and minorities do. For some years, this discussion has gotten much more recognition because of #MeToo on mostly sexual boundary-breaking behavior. A few weeks ago, the program BOOS revealed that several men in the program The Voice of Holland had shown sexual boundary-breaking behavior with many contestants. These stories touched us because even though we have never experienced something significant like this ourselves, we have been in situations where we felt like our boundaries weren't respected or uncomfortable and unable to speak up for ourselves. If we look at the world and how it is today, there are still many rules made by men that make it harder or more vulnerable to speak out, not just about sexually transgressive behavior but in general. That's why we came up with the following brand vision.&nbsp;</p>
-      <p class="brand_vision">"In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discomforts because only then we can have a fair and civilized society."</p>
+      <h2 class="content_text"> 2 Marketing</h2>
+		<p>In content, we have decided that our brand revolves around the issue of living in a patriarchal world in which women and minorities aren't feeling protected and able to voice their boundaries because not enough attention is paid to it, and the boundaries aren't respected or listened to. Our brand vision is, "In a world where people are still living in the rules of the past and patriarchy, we believe that it is vital that people feel safe, protected, and able to voice their feelings and discom-forts because only then we can have a fair and civilized society." Our core values are safety, respon-siveness, respect, and self-determination. With our product being sweaters with bold statements on them, such as "Fuck Off," "No is No," "My Body My Rules."</p>
+		
+		<h4 class="content_subtext mt-4">Communication Objectives</h4>
+		<p><strong>Reach Objective</strong></p>
+      <p>Because we are in the beginning stadium of communicating our brand towards our audience, we focus on creating "brand awareness" (Inkbot Design, 2020). Facebook recommends a source audi-ence of between 1,000 and 50,000 people (Henderson, 2020). However, we are a new brand with having no loyal customers yet, followers, or even people who are aware of our brand. Keeping in mind that our target audience is the age group that is spending the most time on social media (CBS, 2020), we aim to have at least 250 people on Instagram and 300 on TikTok who have seen our message before April 14 2022. In our persona interviews it turned out that the hours spent on these two platforms goes more to TikTok. Therefore, we are more likely to have more views on TikTok than on Instagram, even though both are popular among our target audience.
+</p>
+      <p class="brand_vision">1. At least 250 people will have seen our messages on our Instagram page before April 14.<br>
+2. At least 300 people will have seen our messages on our TikTok page before April 14.</p>
+		
+		
+		<p><strong>Affect Objective</strong></p>
+      <p>We described at the reach objective that we want 250 people to see our message on Instagram and 300 people to see our messages on TikTok. We aim to have between 2% and 3% of our follow-er's comment on our posts, which is around 15 people for both platforms in total. We choose 2/3%, because an average engagement rate lies between 1 and 3,5% for Instagram (Polishchuk, 2021). We wanted to challenge ourselves to rise above a low engagement rate to end up in the top of average engagement numbers. But since we are a new brand without financial resources, we think an engagement rate that is higher than average will be hard to accomplish. 
+</p>
+      <p class="brand_vision">At least 15 people will feel supported and empowered by our brand or will at least agree to disap-prove of crossing someone else's boundaries before April 14 2022.</p>
+		
+		<p><strong>Response Objective</strong></p>
+      <p>This is a result of an engaging feed. As the audience is willing to share their experience with our brand, we will build valuable social proof that can convert potential customers who are on the fence about making a purchase.
+</p>
+      <p class="brand_vision">Our audience will like and share the page with an average of 150 followers (WorkMacro, 2018) before April 14 2022. </p>
 		
       <h4 class="content_subtext mt-4">Core Values&nbsp;</h4>
       <p><strong>1. Respect:</strong> We want to contribute to our brand to create more respect among people (also for women and minorities) and hope that this will be the outcome. Because this is an issue that in-volves a lot of respect or, better said, a lack of respect, we intend to always behave re-spectfully to our customers.
