--- a/marketing justification.html
+++ b/marketing justification.html
@@ -115,8 +115,13 @@ Looking at this, our brand positioning statement will be "For individuals lookin
  </p>
 		
    
-<h4 class="content_subtext mt-4">Brand Persona</h4>
-      <p>In marketing, we have decided to focus on a target audience between the ages of 18-and 27, all genders, and living in the Netherlands. Therefore, we will interview people who have this in common. We have several questions to ask in our 15 interviews to gain insight into our brand persona. We came up with the following questions:</p>
+<h4 class="content_subtext mt-4">Media Tactics</h4>
+      <p>The platforms we will be using are TikTok and Instagram. We will be using these 2 media platforms as these are the most used by our target audience according to our research.<br><br>
+ Among the many social media platforms there are, we choose TikTok because one of their biggest audience groups (41%) (Aslam, S., 2022) is between the age of 16 and 24. Not only does TikTok fall perfectly in our target audience, but the platform is also well known for 'going viral within a day'. This as TikTok creates an algorithm specialized to what the user views and likes. By using trending hashtags and popular sounds the chance of going viral is pretty high. As a starting brand this could help us build up a social media awareness among our target audience in the beginning stage of our marketing plan. <br>
+<br>
+As for our second platform, we choose Instagram for the same reasons as TikTok, it fits our target audience, this as one of the biggest target groups of Instagram is 18-24 years old (31%) (Statista, 2022). Nevertheless, the Instagram algorithm works different than that of TikTok. On Instagram you only get to see content of the people you follow, but it is easy to share posts of companies due to the broader communication methods Instagram uses, including group private messages and stories. Although the sharing options are broader, Instagram remains a platform that is more focused on the longer term. We will be using Instagram to keep our followers who came from our TikTok informed about the progression of the company and keep them hooked up after the viral TikTok video.<br>
+<br>
+ To sum thing up; TikTok will be our opening platform as it is easier to reach a bigger audience than on Instagram. In our TikTok videos we will be promoting our Instagram page so potential customers can keep up to date on our progress and can contain special content via our Instagram page.</p>
       
 		<p><strong>General Questions</strong>
 <br>
