--- a/account.html
+++ b/account.html
@@ -88,7 +88,6 @@ function MM_popupMsg(msg) { //v1.0
 	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-	Corporate&nbsp;&nbsp;&nbsp;	Accout&nbsp;
 		
 		 <main class="container py-4">
     <div class="row g-3 justify-content-evenly"></div>
@@ -102,7 +101,7 @@ function MM_popupMsg(msg) { //v1.0
 				
 				<p><span><input type="checkbox"></span> I agree to the terms and conditions of the service.</p>
 			<button type="button" class="sing-btn" onClick="MM_popupMsg('You are signed in.')">Sign In</button>
-			<input type="forgotten password" class="input-box" placeholder="If you have forgotten your password, you can write you email here">
+			<input type="forgotten password" class="input-box" placeholder="If you have forgotten your password, you can write your email here">
 			
 			<button type="button" class="sing-btn" onClick="MM_popupMsg('An email has been sent to you to change your password.')">Forgot Password</button>
 			<p class="or">OR</p>
