--- a/production justification.html
+++ b/production justification.html
@@ -104,6 +104,45 @@ We decided to put our content in the middle of the page, with broad <strong>marg
   <strong> Management</strong> – We portray our unique value proposition on the site, and as can be read under 'persona,' we made the site fit the target group. The quotes from the sweaters are accurate quotes our target group said during interviews with us. The prices of the sweaters are based on what our target group would be willing to pay for them (as we learned during the interviews) and as we stat-ed in our lean canvas.
 We developed our product by keeping it simple but using quotes from the target group so that they recognize themselves and stand behind the message on their sweatshirts.</p>
 		
+		      <img class="img-fluid about-the-brand-logo" src="images/paperprototype_homepage.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype1.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype2.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype3.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype4.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype5.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype6.jpg" alt="Placeholder Image"><br>
+		
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype7.jpg" alt="Placeholder Image"><br>
+		
+		<p><strong>The used design elements in our final website</strong></p>
+<p>We used many straight<strong> lines</strong> in our website because we wanted to divide each subsection of the website. Next to that, we underlined our values on the page 'About VirtYou' to emphasize our val-ues.<br>
+  <br>
+
+Our buttons are oval since we want our audience to feel welcome to click on the buttons and check out our sweaters. We want to convey boldness and share a serious message. Sharp corners on <strong>shapes</strong> sometimes feel too threatening, according to us. This is also why we don't use many sharp corners on the page where our audience can log in and register. On other pages, we do use sharp corners because on those pages.<br>
+<br>
+
+We did not use a difference in <strong>texture</strong> in our letters or the color of our logos or text since we wanted to convey a serious message that must be clear rather than showing something wonderful and artistic.<br>
+<br>
+
+We divided some subsections of our website by <strong>color</strong>. The colors red, white, and black come back on every page and subsection of the site to create unity. Next to that, we made things we wanted to stand out red to show hierarchy and emphasize these pieces of text. </p>
+		
+		<p><strong>The used design principles in our final website</strong></p>
+<p>We tried to create <strong>unity</strong> and <strong>harmony</strong> by repetition of colors and repetition of the header and footer on all sites. For example, the sign-in page also looks similar to the registration page. We also tried to place images the same way and place the products the same way in the catalog. We also have a lot of similarities on our website. For example, the sign-in page and registration page look very similar and are built the same way.<br>
+<br>
+
+When looking at <strong>balance</strong>, most of our pages are symmetrical. The right side of the screen does not give the same information as the left side of the screen, of course, but the grids look the same on both sides. <br>
+<br>
+Using a size difference in text and images, we tried to create a <strong>hierarchy</strong> throughout every site page. But we also made use of scale and <strong>proportion</strong>. The most crucial text is often more significant than the rest, and elements that belong together are also placed together. We also made use of focal points. For example, the video on the homepage covers the whole width of the screen, making the video a focus point rather than the information above or under it. In these ways, we created <strong>dominance</strong> and <strong>emphasis</strong> without losing track of the unity of the entire design.<br>
+<br>
+
+As said before, some pages have round edges at shapes, because of the welcoming vibe of that page, for example, the registration page or the buttons to add a product to the shopping cart. Oth-er pages have sharp edges since we want to convey a serious message boldly. This way, we created <strong>contrast</strong>. The shapes on every individual page, however, are more similar. Since we kept the background of our web pages light in comparison to the foreground, we also created <strong>contrast</strong>. </p>
+		
       <h4 class="content_subtext mt-4">Core Values&nbsp;</h4>
       <p><strong>1. Respect:</strong> We want to contribute to our brand to create more respect among people (also for women and minorities) and hope that this will be the outcome. Because this is an issue that in-volves a lot of respect or, better said, a lack of respect, we intend to always behave re-spectfully to our customers.
 	<br>
