--- a/production justification.html
+++ b/production justification.html
@@ -143,12 +143,35 @@ Using a size difference in text and images, we tried to create a <strong>hierarc
 
 As said before, some pages have round edges at shapes, because of the welcoming vibe of that page, for example, the registration page or the buttons to add a product to the shopping cart. Oth-er pages have sharp edges since we want to convey a serious message boldly. This way, we created <strong>contrast</strong>. The shapes on every individual page, however, are more similar. Since we kept the background of our web pages light in comparison to the foreground, we also created <strong>contrast</strong>. </p>
 		
-      <h4 class="content_subtext mt-4">Core Values&nbsp;</h4>
-      <p><strong>1. Respect:</strong> We want to contribute to our brand to create more respect among people (also for women and minorities) and hope that this will be the outcome. Because this is an issue that in-volves a lot of respect or, better said, a lack of respect, we intend to always behave re-spectfully to our customers.
-	<br>
-	<strong>2. Self-Determination:</strong> In our vision, we mention that we believe that people should be able to make their own decisions and show their limits. It should be their choice and initiative to where they want it to go, especially where they want it to stop. This brand seeks to clarify to our customers that they have the right to this self-determination.<br>
-	<strong> 3. Safety: </strong> Looking at the issue we are discussing, the world we live in often lacks this security. Cases such as The Voice of Holland show that for years the people who exhibited transgressive behavior could keep doing their thing without being punished for it. Many still feel unsafe when walking, for instance, alone on the street. To bring awareness to this issue, we hope to contribute to more safety.<br>
-	<strong> 4. Responsiveness: </strong> We want people to respond and speak up. We encourage this. The more people start to voice themselves, share their experiences and stand up for themselves and others, the more used this world will get to this, and changes will be made. </p>
+      <h4 class="content_subtext mt-4">Testing Report</h4>
+      <p>We tested our paper prototype with five people from our target group. All participants were with-in the age category of our target group. As we learned from the problem interviews, most of the testers were female since most females need our brand. We also included some males in the test-ing to be safe from biases. We did the testing rounds on campus, where the participants, one by one, could sit at a table, and one person of our team gave the participants some little 'assignments' with which the site could be tested and changed the papers of our paper prototype to make it look like a functioning site. Another team member recorded video and audio of the testing with a mo-bile phone. We asked our participants to think aloud as much as possible during the testing, and after the testing, we asked them for their opinion about our site and if they had any tips. <br>
+Our goal was to see if it is straightforward for our target group what our brand stands for, what we sell, and how to use the site. <br>
+Firstly, we asked the participants if they looked at our homepage and if they knew what kind of products we were selling.
+<br>
+We gave our participants the following assignments and mixed the order up with every person:
+ </p>
+		
+<p>-	Search for a sweater in size S and put it in your shopping cart.<br>
+-	You have a question; search which phone number you can call if you have a question.<br>
+-	You would like to know what values the brand 'VirtYou' stands for, try to see if you can find them on the site.<br>
+-	You have become enthusiastic about 'VirtYou' and want to follow them on Instagram. Try to see how you can find them on Instagram.<br>
+-	Search for another sweater. It has to be a sweater with the brand's logo and a quote.<br>
+-	Add a sweater in size XL to your shopping cart.<br>
+-	Delete the sweater in size S from your shopping cart and make sure you have TWO sweaters in size XL in your shopping cart (the ones with the logo and quote you just added).<br>
+-	Log in to your account.
+</p>
+		
+		<p>We tested our online site with two people from our target group. Both participants were within the age category of our target group. We tested the online site with one male and one female par-ticipant to stay inclusive in our testing and avoid bias as much as possible with only two partici-pants. We did the testing rounds on campus, where the participants could use a laptop of one of our team members to explore our site. This team member would film the test with a mobile phone, and another team member gave the participants small assignments. We asked our partici-pants to think aloud as much as possible during the testing, and after the testing, we asked them if they still had any tips for us. <br>
+Our goal was to see if our site is functioning, easy to use for the target group, understandable and customer-friendly. First, when they look at our homepage, we asked the participants if they knew what kind of products we were selling. 
+<br>
+We gave our participants the following assignments and mixed the order up with every person:
+</p>
+		<p>-	Put a sweater in size 'S' in your shopping cart.<br>
+-	Try to find the values of the brand.<br>
+-	Try to go back to the homepage.<br>
+-	Try to see if you can find our social media accounts.<br>
+-	Create an account on our site.
+</p>
 		
    
 <h4 class="content_subtext mt-4">Brand Persona</h4>
