--- a/production justification.html
+++ b/production justification.html
@@ -180,8 +180,10 @@ We gave our participants the following assignments and mixed the order up with e
 
 <br><br>
 Paper prototype testing:
-</p><br><br>
-	<p>Online prototype testing:</p>	
+</p>
+		<img class="img-fluid about-the-brand-logo" src="images/paperprototype.png" alt="Placeholder Image"><br>
+		<br><br>
+	<p>Online prototype testing:</p>	<img class="img-fluid about-the-brand-logo" src="images/website.png" alt="Placeholder Image"><br>
 		<br><br>
 	
       
