--- a/corporate.html
+++ b/corporate.html
@@ -152,7 +152,7 @@ If the project continued, we would put TikTok on hold. We would not delete the a
 		<p>&nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CcQcRoKoB-w/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post10.png">
           </a>
         </li>
