all pictures linked
corporate page

--- a/corporate.html
+++ b/corporate.html
@@ -98,17 +98,17 @@ If the project continued, we would put TikTok on hold. We would not delete the a
       <p>&nbsp;All our social media content in order of posting:&nbsp; &nbsp; &nbsp; &nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.tiktok.com/@virtyou_/video/7076347126262861062?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post1.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CbKFCvbMlRn/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post2.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.tiktok.com/@virtyou_/video/7077830613549583622?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post3.png">
           </a>
         </li>
@@ -116,17 +116,17 @@ If the project continued, we would put TikTok on hold. We would not delete the a
 	<p>&nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CbvRdI4orUb/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post4.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.tiktok.com/@virtyou_/video/7080477342677683461?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post5.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CcGWL8louiK/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post6.png">
           </a>
         </li>
@@ -134,17 +134,17 @@ If the project continued, we would put TikTok on hold. We would not delete the a
 		<p>&nbsp;</p>
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CcFQP-DM0nd/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post7.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CcFw92LLSix/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post8.png">
           </a>
         </li>
         <li class="m-2">
-          <a href="#"><!-- Please make a link to your socials instead -->
+          <a href="https://www.instagram.com/p/CcGWL8louiK/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post9.png">
           </a>
         </li>
